--- a/src/index.html
+++ b/src/index.html
@@ -1,133 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Eduardo Reyes Portfolio</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
 
-    <body>
-        <div id="header">
-            <div id="header-img">
-                <img src="E.jpg" height="35">
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Eduardo Reyes Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="text-center">
+
+    <!-- Header -->
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid shadow">
+            <h3 class="navbar-brand mb-0 h1 p-2 text-primary">Eduardo Reyes</h3>
+        </div>
+    </nav>
+
+    <!-- Hero -->
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 ">
+            <div class="col-10 col-sm-8 col-lg-6 ">
+                <img src="./imgs/IMG_3278.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+                    height="500" loading="lazy">
             </div>
-            <div id="header-heading">
-                <h1>Eduardo Reyes</h1>
+            <div class="col-lg-6 text-center text-lg-start">
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
+                <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s
+                    most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
+                    system, extensive prebuilt components, and powerful JavaScript plugins.</p>
             </div>
         </div>
+    </div>
 
-        <div>
-            <img id="banner" src="port9.jpg" alt="Banner" height="240">
-        </div>
+    <!-- Picture Display -->
+    <div class="row align-items-center">
+        <div class="col-md-4 text-center mb-2">
+            <img class="img-thumbnail w-75 h-auto mb-2" src="./imgs/bluemoon3.jpeg">
+            <h2 class="fw-normal">Heading</h2>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 text-center">
+            <img class="img-thumbnail w-75 h-auto mb-2" src="./imgs/port1.jpg">
+            <h2 class="fw-normal">Heading</h2>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 text-center">
+            <img class="img-thumbnail w-75 h-auto mb-2" src="./imgs/m-31.jpg">
+            <h2 class="fw-normal">Heading</h2>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 text-center">
+            <img class="img-thumbnail w-75 h-auto mb-2" src="./imgs/port2.jpg">
+            <h2 class="fw-normal">Heading</h2>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 text-center">
+            <img class="img-thumbnail w-75 h-auto mb-2" src="./imgs/mojave-copy.jpeg">
+            <h2 class="fw-normal">Heading</h2>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 text-center">
+            <img class="img-thumbnail w-75 h-auto mb-2" src="./imgs/port9.jpg">
+            <h2 class="fw-normal">Heading</h2>
+        </div><!-- /.col-lg-4 -->
+        
+    </div>
+    <!-- Footer -->
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
+          </div>
+      
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-primary" href="#">Mail</a></li>
+            <li class="ms-3"><a class="text-body-primary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-primary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul>
+        </footer>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-        <div id="about-me">
-            <div id="ampic">
-                <img class="aminpic" src="IMG_3278.jpg" height="300">
-            </div>
-            <div id="amdesc">
-                <h1>About Me</h1>
+</body>
 
-                <p id="am">
-                    I am a 21 year old self taught photographer from California. I enjoy taking
-                    pictures of nature and the sky.
-                </p>
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="description">
-                <div>
-                    <p class="descp">Once In a Blue Moon</p>
-                </div>
-                <div>
-                    <p>March 2023</p>
-                </div>
-            </div>
-            <div id="picture">
-                <img class="portlay" src="bluemoon3.jpeg">
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="picture">
-                <img class="landlay" src="port1.jpg">
-            </div>
-            <div id="description">
-                <p></p>
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="description">
-
-            </div>
-            <div id="picture">
-                <img class="portlay" src="mojave-copy.jpeg">
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="picture">
-                <img class="landlay" src="port2.jpg">
-            </div>
-            <div id="description">
-                <p></p>
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="description">
-
-            </div>
-            <div id="picture">
-                <img class="portlay" src="m-31.jpg">
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="picture">
-                <img class="landlay" src="port9.jpg">
-            </div>
-            <div id="description">
-                <p></p>
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="description">
-
-            </div>
-            <div id="picture">
-                <img class="portlay" src="port13.jpg">
-            </div>
-        </div>
-
-        <div id="port">
-            <div id="picture">
-                <img class="portlay" src="port15.jpg">
-            </div>
-            <div id="description">
-
-            </div>
-        </div>
-
-        <div id="footers">
-            <ul class="footer-links">
-                <li>
-                    About Me
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/aime.leon.lalo?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr" target="_blank">Instagram</a>
-                </li>
-                <li>
-                    <a href="mailto:eduardo.reyes.145297@gmail.com" target="_blank">Contact Me</a>
-                </li>
-            </ul>
-
-            <span class="copyright">© 2024 Eduardo Reyes</span>
-        </div>
-
-    </body>
 </html>
